--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body>
 		<h1>Facial asymmetry</h1>
 		<div>
-			Select an image file (it wont’t be uploaded anywhere; doesn’t work in IE &lt; 11): <input id="imagefile" type="file" name="img" size="65"><br>
+			Select an image file (it won’t be uploaded anywhere; doesn’t work in IE &lt; 11): <input id="imagefile" type="file" name="img" size="65"><br>
 			or specify an image URL: <input id="imageurl" size="100"><br>
 			Then select the center of the face with your mouse.
 		</div>
