--- a/index.html
+++ b/index.html
@@ -8,18 +8,14 @@
 				font-family: sans-serif;
 				font-size: 16px;
 			}
-
-			input {
-				margin: 10px 0;
-			}
 		</style>
 	</head>
 	<body>
 		<h1>Facial asymmetry</h1>
 		<div>
-			Select an image file (it won’t be uploaded anywhere; doesn’t work in IE &lt; 11): <input id="imagefile" type="file" name="img" size="65"><br>
-			or specify an image URL: <input id="imageurl" size="100"><br>
-			Then select the center of the face with your mouse.
+			<p>Select an image file (it won’t be uploaded anywhere; doesn’t work in IE &lt; 11): <input id="imagefile" type="file" name="img" size="65"></p>
+			<p>or specify an image URL: <input id="imageurl" size="100"></p>
+			<p>Then select the center of the face with your mouse.</p>
 		</div>
 		<div>
 			<canvas id="left" width="10" height="10"></canvas><canvas id="right" width="10" height="10"></canvas>
